use_undefined_identifier/c1/l_king_mobility
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/l_king_mobility/src/leval.c:563:56: error: use of undeclared identifier 'jpt_404015'
result += board[square + ( __int64)*( int *)( ( char *)jpt_404015 + v2)] == 13; 
                                                       ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/l_king_mobility/src/obj/leval.o] Error 1
